Fix style issue on mobile

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -6,6 +6,7 @@
     text-align: center;
     height: 100dvh;
     min-height: 500px;
+    margin-top: 10dvh;
     
     .hero {
         max-width: 270px;
